create github pages

--- a/examples.html
+++ b/examples.html
@@ -65,11 +65,11 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build your own site for free</a></section><section class="header1 cid-s24RdgC0Qb" id="header1-1v">
+<section class="engine"><a href="https://mobirise.info/c">free site builder</a></section><section class="header1 cid-s24RdgC0Qb" id="header1-1v">
 
     
 
-    <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(177, 163, 116);">
+    <div class="mbr-overlay" style="opacity: 0.2; background-color: rgb(177, 163, 116);">
     </div>
 
     <div class="container">
@@ -79,7 +79,7 @@
                 <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-2">
                     Examples</h3>
                 <p class="mbr-text align-center pb-3 mbr-fonts-style display-5">
-                    Here are a few projects I have nurtured and brought to fruition over the years.</p>
+                    Below are a few projects that I have nurtured and brought to fruition over the years.<br><br><strong>My purpose</strong> is to <br>help nurture your project and make it a reality using the <em>gift of imagination</em> that I am blessed with. <br>Your project can harness my "super-power" ;-)<br><br><br><br></p>
                 
             </div>
         </div>
@@ -320,7 +320,7 @@ Papa Deli Bistro, Bristol.</strong></td></tr><tr>
   <script src="assets/theme/js/script.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-    <input name="animation" type="hidden">
+  <input name="animation" type="hidden">
+   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
   </body>
 </html>
