--- a/examples.html
+++ b/examples.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="header1 cid-s24RdgC0Qb" id="header1-1v">
+<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section class="header1 cid-s24RdgC0Qb" id="header1-1v">
 
     
 
@@ -380,7 +380,7 @@ Papa Deli Bistro, Bristol.</strong></td></tr><tr>
   <script src="assets/theme/js/script.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   </body>
 </html>
