--- a/examples.html
+++ b/examples.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="header1 cid-s24RdgC0Qb" id="header1-1v">
+<section class="engine"><a href="https://mobirise.info/n">free simple site templates</a></section><section class="header1 cid-s24RdgC0Qb" id="header1-1v">
 
     
 
@@ -160,7 +160,7 @@
                 <div class="panel-item p-3">
                     <div class="card-block">
                         <div class="testimonial-photo">
-                            <img src="assets/images/in-the-frame-240x170.png" alt="" title="">
+                            <img src="assets/images/imag0070-4-240x375.jpg" alt="" title="">
                         </div>
                         <p class="mbr-text mbr-fonts-style display-7">Do give me a call to discuss how I can help.</p>
                     </div>
