--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build a site for free</a></section><section class="header15 cid-s1PeMQP4LN" id="header15-12">
+<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section class="header15 cid-s1PeMQP4LN" id="header15-12">
 
     
 
@@ -81,7 +81,7 @@
                 <div class="form-container">
                     <div class="media-container-column" data-form-type="formoid">
                         <!---Formbuilder Form--->
-                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="SZ9TnQhoQ3xsqJ41qrHl5EljD/6RXQbOLtXkFX3r1uvZzFj5JlCCKRUnEcZBqCO9wYp+DhRHvCF2K91kd/8FuBkXEt6C5Ou4M1/csWJ2CklKNeOUmGoENsbsFCkV67Qp">
+                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="KBKEbkGlYZZtZS/F0Gy16uRjOsJ7BcOXNFUO0IcyAEx1ENlTQAlQoXLyuTtzM3hby230B21sKqKbAyLD25I7sm0pzV6VYjsD/YAIqXE3bJF2Gw9T8JLF4SyPR5sAnJrV">
                             <div class="row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -174,7 +174,7 @@
   <script src="assets/formoid/formoid.min.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-    <input name="animation" type="hidden">
+  <input name="animation" type="hidden">
+   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
   </body>
 </html>
