--- a/hottoast.html
+++ b/hottoast.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="header3 cid-s1OcDHczr0" id="header3-h">
+<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="header3 cid-s1OcDHczr0" id="header3-h">
 
     
 
@@ -168,7 +168,7 @@
                             <img src="assets/images/melvyn-115x115.jpg" alt="" title="">
                         </div>
                         <p class="mbr-text mbr-fonts-style mbr-white display-7">
-                           Currently based in Nice, France,<br>Melvyn is a Graphic Designer with a degree in Creative Advertising.<br>He specializes in Brand Identity Design work and website build with Webflow.<br>You can see a small sample of his work here: <a href="https://www.instagram.com/melvyn_design/" target="_blank">www.instagram.com/melvyn_design</a></p>
+                           Currently based in Nice, France,<br>Melvyn is a Graphic Designer with a degree in Creative Advertising.<br>He specializes in Brand Identity Design work and website builds with Webflow.<br>You can see a small sample of his work here: <a href="https://www.instagram.com/melvyn_design/" target="_blank">www.instagram.com/melvyn_design</a><br>Melvyn has designed a type-writer font that you can purchase here: <a href="https://gumroad.com/melvynswingler" target="_blank">www.gumroad.com/melvynswingler</a>&nbsp;&nbsp;<br>Examples of Brand Identity Design Services can be downloaded here (.pdf catalogue): &nbsp;<a href="assets/files/Brand_Identity_Catalogue_Melvyn_Swingler.pdf" target="_blank">Download Catalogue</a></p>
                     </div>
                     <div class="card-footer">
                         <div class="mbr-author-name mbr-bold mbr-fonts-style mbr-white display-7">Melvyn Swingler<br>Brand Identity Design</div>
@@ -418,7 +418,7 @@
   <script src="assets/theme/js/script.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-    <input name="animation" type="hidden">
+  <input name="animation" type="hidden">
+   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
   </body>
 </html>
