--- a/hottoast.html
+++ b/hottoast.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="header3 cid-s1OcDHczr0" id="header3-h">
+<section class="engine"><a href="https://mobirise.info/k">how to develop your own website</a></section><section class="header3 cid-s1OcDHczr0" id="header3-h">
 
     
 
@@ -168,7 +168,7 @@
                             <img src="assets/images/melvyn-115x115.jpg" alt="" title="">
                         </div>
                         <p class="mbr-text mbr-fonts-style mbr-white display-7">
-                           Currently based in Nice, France,<br>Melvyn is a Graphic Designer with a degree in Creative Advertising.<br>He specializes in Brand Identity Design work and website builds with Webflow.<br>You can see a small sample of his work here: <a href="https://www.instagram.com/melvyn_design/" target="_blank">www.instagram.com/melvyn_design</a><br>Melvyn has designed a type-writer font that you can purchase here: <a href="https://gumroad.com/melvynswingler" target="_blank">www.gumroad.com/melvynswingler</a>&nbsp;&nbsp;<br>Examples of Brand Identity Design Services can be downloaded here (.pdf catalogue): &nbsp;<a href="assets/files/Brand_Identity_Catalogue_Melvyn_Swingler.pdf" target="_blank">Download Catalogue</a></p>
+                           Currently based in Nice, France,<br>Melvyn is a Graphic Designer with a degree in Creative Advertising.<br>He specializes in Brand Identity Design work and website builds with Webflow.<br>You can see a small sample of his work here: <a href="https://www.instagram.com/melvyn_design/" target="_blank">www.instagram.com/melvyn_design</a><br>Melvyn has designed a type-writer font that you can purchase here: <a href="https://gumroad.com/melvynswingler" target="_blank">www.gumroad.com/melvynswingler</a>&nbsp;&nbsp;<br>Examples of Brand Identity Design Services are available on request.</p>
                     </div>
                     <div class="card-footer">
                         <div class="mbr-author-name mbr-bold mbr-fonts-style mbr-white display-7">Melvyn Swingler<br>Brand Identity Design</div>
