create github pages

--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">web creation software</a></section><section class="header15 cid-s1PeMQP4LN" id="header15-12">
+<section class="engine"><a href="https://mobirise.info/y">free html web templates</a></section><section class="header15 cid-s1PeMQP4LN" id="header15-12">
 
     
 
@@ -81,7 +81,7 @@
                 <div class="form-container">
                     <div class="media-container-column" data-form-type="formoid">
                         <!---Formbuilder Form--->
-                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Xj1QTjY8KqdgB170ebbKgXeLdY/t6t+OPaZcXs837rcv9xgo+jUQ9mqD2DDYVgA9fxWWzn8b/Vguho9GgcG9uUNxGo4H5zYMYOY1D836D5bNTYEPkwNVLAs3+0dkcwPj">
+                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="La8T9EZv71ig8VSngDDADQSStQ2UAlT9vNGt7ah+79lStk5q1FIIvoBQH0436VqGFKF2LS1OY4Z6i+KrkSRnlu9YZuEXsagtFLvofcZLPfJanZnLI6ZbFp+5xPC5c62S">
                             <div class="row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -174,7 +174,7 @@
   <script src="assets/formoid/formoid.min.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   </body>
 </html>
