--- a/examples.html
+++ b/examples.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="header1 cid-s24RdgC0Qb" id="header1-1v">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header1 cid-s24RdgC0Qb" id="header1-1v">
 
     
 
