create github pages

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <meta property="og:image" content="assets/images/index-meta.jpg"/>
 <meta name="twitter:title" content="Korusu - Imagination can deliver"/>
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/korusu-logo-white-background-rect-460x210-156x71.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/korusu-trees-logo-v2-small-210x155.png" type="image/x-icon">
   <meta name="description" content="">
   
   <title>Korusu - Imagination can deliver</title>
@@ -47,7 +47,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html">
-                         <img src="assets/images/korusu-logo-white-background-rect-460x210-156x71.png" alt="Mobirise" title="" style="height: 4.9rem;">
+                         <img src="assets/images/korusu-trees-logo-v2-small-210x155.png" alt="Mobirise" title="" style="height: 4.9rem;">
                     </a>
                 </span>
                 
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build a site for free</a></section><section class="carousel slide cid-s2IOkizFks" data-interval="false" id="slider1-2j">
+<section class="engine"><a href="https://mobirise.info/h">create your own web page</a></section><section class="carousel slide cid-s2IOkizFks" data-interval="false" id="slider1-2j">
 
     
 
