create github pages

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   
 </head>
 <body>
-  <section class="menu cid-s20Pn6otgz" once="menu" id="menu1-1n">
+  <section class="menu cid-s2OKzwV0u5" once="menu" id="menu1-2k">
 
     
 
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create your own web page</a></section><section class="carousel slide cid-s2IOkizFks" data-interval="false" id="slider1-2j">
+<section class="engine"><a href="https://mobirise.info/c">free website builder</a></section><section class="carousel slide cid-s2IOkizFks" data-interval="false" id="slider1-2j">
 
     
 
