--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="carousel slide cid-s2IOkizFks" data-interval="false" id="slider1-2j">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="carousel slide cid-s2IOkizFks" data-interval="false" id="slider1-2j">
 
     
 
@@ -208,7 +208,7 @@
   <script src="assets/slidervideo/script.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   </body>
 </html>
