create github pages

--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="header15 cid-s1PeMQP4LN" id="header15-12">
+<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section class="header15 cid-s1PeMQP4LN" id="header15-12">
 
     
 
@@ -78,7 +78,7 @@
                 <div class="form-container">
                     <div class="media-container-column" data-form-type="formoid">
                         <!---Formbuilder Form--->
-                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="44+uhu4x7HYGZzB6ddp/wB2mbIjNhFwaj/wbjdUS77xE/EUQTIKOIb3Z0wRqH87nnZygBN90NF6O3OKaZOGCfWq855tJwOQaIqm13oCopV6H/VDJj+xs1E9VrP4c0drx">
+                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="N3OQA3KXXFbKjUQMVAIwpWp71kKgTZLGC0osYTzskI4T9MC0EWXxtcpusg4W+2djcInTyvF0M9D845aAmVFTy+WDI2UsB9EGRMxwbVahTVdGigST1n+U+PVAiMADO55B">
                             <div class="row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thank you. I will reply as soon as I can.</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
