create github pages

--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section class="header15 cid-s1PeMQP4LN" id="header15-12">
+<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="header15 cid-s1PeMQP4LN" id="header15-12">
 
     
 
@@ -72,13 +72,13 @@
             <div class="mbr-white col-lg-8 col-md-7 content-container">
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-2">
                     Contact</h1>
-                <p class="mbr-text pb-3 mbr-fonts-style display-7">I look forward to hearing from you.<strong><br></strong><br><strong>Chris Swingler</strong> <br>My "Multi-Hats" depending on season/demand<br><strong>IDEA NURTURER - CATALYST - BRAND MANAGER</strong>&nbsp;Korusu<br><strong>AUTHOR &amp; VOICE</strong>&nbsp;(Baltimore) Idea Haven<br><strong>EDITOR</strong>&nbsp;(Focus in the Wild) Idea Haven<br><strong>UK MARKETING</strong>&nbsp;(Brand Identity Design) Hot Toast<br><strong>ONLINE GALLERY HOST</strong>&nbsp;(Wildlife Art Photography) Interest Sparks<br></p>
+                <p class="mbr-text pb-3 mbr-fonts-style display-7">I look forward to hearing from you.<strong><br></strong><br><strong>Chris Swingler</strong> <br>My "Multi-Hats" depending on season/demand are:<br><br><strong>* Project Leader &amp; Brand Manager </strong>Korusu<br><strong>* Author &amp; Voice&nbsp;</strong>(for Baltimore) Idea Haven<br><strong>* Editor</strong>&nbsp;(for Focus in the Wild) Idea Haven<br><strong>* UK Marketing</strong>&nbsp;(for Brand Identity Design) Hot Toast<br><strong>* Online Gallery Host</strong>&nbsp;(for Wildlife Art Photography) Interest Sparks<br></p>
             </div>
             <div class="col-lg-4 col-md-5">
                 <div class="form-container">
                     <div class="media-container-column" data-form-type="formoid">
                         <!---Formbuilder Form--->
-                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="N3OQA3KXXFbKjUQMVAIwpWp71kKgTZLGC0osYTzskI4T9MC0EWXxtcpusg4W+2djcInTyvF0M9D845aAmVFTy+WDI2UsB9EGRMxwbVahTVdGigST1n+U+PVAiMADO55B">
+                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="SeGwpesVsI1IRzeTIl2sntxl5nCsLY1Ned6s9o7T8aQgNA8lP5tCqc/crR/BaMc+awoJ0UC8urjDUN9lWsb+FIkgXY59473hOzhJKbG1NM/DvbW+q+Qd+8cL2y1CeXUF">
                             <div class="row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thank you. I will reply as soon as I can.</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
