--- a/examples.html
+++ b/examples.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="header1 cid-s24RdgC0Qb" id="header1-1v">
+<section class="engine"><a href="https://mobirise.info/m">site design templates</a></section><section class="header1 cid-s24RdgC0Qb" id="header1-1v">
 
     
 
