create github pages

--- a/brandstory.html
+++ b/brandstory.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create your own website for free</a></section><section class="header9 cid-s1UPLcD5lD" id="header9-1h">
+<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="header9 cid-s1UPLcD5lD" id="header9-1h">
 
     
 
@@ -71,8 +71,8 @@
         <div class="media-container-column mbr-white">
             <h1 class="mbr-section-title align-left mbr-bold pb-3 mbr-fonts-style display-2">Brand Story</h1>
             <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-5"><strong>Korusu is the Turkish word for Grove</strong></h3>
-            <p class="mbr-text align-left pb-3 mbr-fonts-style display-7">I got the idea for the name over 2 days of brain-storming and remembering where I used to live as a child in Istanbul from 1972 - 1977. <br>We lived on a steep street overlooking the Bosphorous near the Rumeli Hisar castle. It was called Ayse Sultan Korusu and the thought of naming the home of my creative brands with a name that came directly from&nbsp;where my home was in those years and evoking thoughts of Fruit Trees in a Grove and using the Turkish word became very appealing. <br><br>I think it sounds good too, like "Chorus" with (a) "u" added :-)<br>
-<br><strong>You can find out more about Hot Toast, Interest Sparks and Idea Haven </strong><br><strong>on the <a href="portfolio.html">Korusu brand portfolio page</a></strong><br></p>
+            <p class="mbr-text align-left pb-3 mbr-fonts-style display-7">I got the idea for the name over 2 days of brain-storming and remembering where I used to live as a child in Istanbul from 1972 - 1977. <br>We lived on a steep street overlooking the Bosphorous near the Rumeli Hisar castle. It was called Ayse Sultan Korusu and the thought of naming the home of my creative brands with a name that came directly from&nbsp;where my home was in those years and evoking thoughts of Fruit Trees in a Grove and using the Turkish word became very appealing. <br><br>I think it sounds good too, like "Chorus" with (a) "u" added :-)<br><br>Chris Swingler&nbsp;<br>Project Leader &amp; Brand Manager<br><br><br>
+<br><strong><br>My background</strong> <a href="about.html">About Chris Swingler</a><br><strong>You can find out more about Hot Toast, Interest Sparks and Idea Haven </strong><strong>on the <a href="portfolio.html">Korusu brand portfolio page</a></strong><br><br><strong><a href="portfolio.html"><br></a></strong><br></p>
             
         </div>
     </div>
