--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create your own web page for free</a></section><section class="testimonials5 cid-s1Yc4Y6hJF" id="testimonials5-1m">
+<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="testimonials5 cid-s1Yc4Y6hJF" id="testimonials5-1m">
 
     
 
@@ -70,8 +70,8 @@
         <div class="media-container-row">
             <div class="title col-12 align-center">
                 <h2 class="pb-3 mbr-fonts-style display-2"><strong>Chris Swingler - Back Story</strong></h2>
-                <h3 class="mbr-section-subtitle mbr-light pb-3 mbr-fonts-style display-5">
-                    A travelling tale,&nbsp;<br>from Zurich to Istanbul, Paris to Provence and more...</h3>
+                <h3 class="mbr-section-subtitle mbr-light pb-3 mbr-fonts-style display-5"><strong>
+                    A travelling tale,&nbsp;<br>from Zurich to Istanbul, Paris to Provence and more...</strong></h3>
             </div>
         </div>
     </div>
@@ -85,15 +85,14 @@
                 <div class="panel-item">
                     <div class="card-block">
                         <div class="testimonial-photo">
-                            <img src="assets/images/imag0070-4-240x375.jpg" alt="" title="">
+                            <img src="assets/images/imag0070-8-240x375.jpeg" alt="" title="">
                         </div>
-                        <p class="mbr-text mbr-fonts-style mbr-white display-7"><strong>
-                           Here's a short overview of the past 50 years!</strong></p>
+                        <p class="mbr-text mbr-fonts-style mbr-white display-7">Chris and daughter Eleanor</p>
                     </div>
                     <div class="card-footer">
                         <div class="mbr-author-name mbr-bold mbr-fonts-style mbr-white display-7">
                              Chris Swingler</div>
-                        <small class="mbr-author-desc mbr-italic mbr-light mbr-fonts-style mbr-white display-7">Idea Nurturer &amp; Catalyst</small>
+                        <small class="mbr-author-desc mbr-italic mbr-light mbr-fonts-style mbr-white display-7">Project Leader &amp; Brand Manager</small>
                     </div>
                 </div>
             </div></div>
