create github pages

--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy web maker</a></section><section class="header15 cid-s1PeMQP4LN" id="header15-12">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header15 cid-s1PeMQP4LN" id="header15-12">
 
     
 
@@ -78,7 +78,7 @@
                 <div class="form-container">
                     <div class="media-container-column" data-form-type="formoid">
                         <!---Formbuilder Form--->
-                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="kVRiwT04xdHRazXcf+ZoQWX/oqcPBFw2jVgKqQrRrHSKKAWgz+s/GEF6iSKCZPXHNLtO/he7NHjsUs2SO155fy+VrPyaU2btSiUPpfx77/nKuG3+iQBjrXASW6myeFgf">
+                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="k9PTai7Lh8mhLBS0kqQ4ND0UPKljINCA2iRqoPbcRIc1YsDfs2OsR9aGJ+KDaUapz9NAspRj8FWzKbsp1ckQlPZu3xxaPYeWrDSb8N1XMFd1buvgYw7+0C3IhGQYfPbq">
                             <div class="row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thank you. I will reply as soon as I can.</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -171,7 +171,7 @@
   <script src="assets/formoid/formoid.min.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-    <input name="animation" type="hidden">
+  <input name="animation" type="hidden">
+   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
   </body>
 </html>
