--- a/hottoast.html
+++ b/hottoast.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple web templates</a></section><section class="header3 cid-s1OcDHczr0" id="header3-h">
+<section class="engine"><a href="https://mobirise.info/m">free website design templates</a></section><section class="header3 cid-s1OcDHczr0" id="header3-h">
 
     
 
@@ -165,7 +165,7 @@
                             <img src="assets/images/img-20191229-wa0005-4-v2-240x360.jpg" alt="" title="">
                         </div>
                         <p class="mbr-text mbr-fonts-style mbr-white display-7">
-                           Currently based in Nice, France,<br>Melvyn is a Graphic Designer with a degree in Creative Advertising.<br>He specializes in Brand Identity Design work and website builds with Webflow.<br>You can see a small sample of his work here: <a href="https://www.instagram.com/melvyn_design/" target="_blank">www.instagram.com/melvyn_design</a><br>Melvyn has designed a type-writer font that you can purchase here: <a href="https://gumroad.com/melvynswingler" target="_blank">www.gumroad.com/melvynswingler</a>&nbsp;&nbsp;<br>Examples of Brand Identity Design Services are available on request.</p>
+                           Currently based in Nice, France,<br><strong>Melvyn is a Graphic Designer with a degree in Creative Advertising.<br>He specializes in Brand Identity Design work and website builds with Webflow.</strong><br>You can see a small sample of his work here: <a href="https://www.instagram.com/melvyn_design/" target="_blank">www.instagram.com/melvyn_design</a><br>Melvyn has designed a type-writer font that you can purchase here: <a href="https://gumroad.com/melvynswingler" target="_blank">www.gumroad.com/melvynswingler</a>&nbsp;&nbsp;<br><strong>Examples of Brand Identity Design Services are available on request.</strong></p>
                     </div>
                     <div class="card-footer">
                         <div class="mbr-author-name mbr-bold mbr-fonts-style mbr-white display-7">Melvyn Swingler<br>Brand Identity Design</div>
