create github pages

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="carousel slide cid-s2IOkizFks" data-interval="false" id="slider1-2j">
+<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="carousel slide cid-s2IOkizFks" data-interval="false" id="slider1-2j">
 
     
 
@@ -158,9 +158,9 @@
     <div class="container">
         <div class="media-container-row">
             <div class="title col-12 col-md-8">
-                <h2 class="align-center pb-3 mbr-fonts-style display-5">Chris Swingler 2020 - Here to help</h2>
+                <h2 class="align-center pb-3 mbr-fonts-style display-5">Chris Swingler Project Services - Here to help</h2>
                 <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5"><strong>
-                    Above you will see a short presentation.<br>Here you can <a href="assets/files/Heretohelpin2020andbeyond.pdf" target="_blank">download a .pdf summary of my services</a><a href="assets/files/Here%20to%20help%20your%20project.pdf" target="_blank"><br></a>I look forward to speaking with you soon.</strong></h3>
+                    Above you will see a short presentation.<br>Here you can <a href="assets/files/Heretohelpyourproject.pdf" target="_blank">download a .pdf summary of my project services</a><a href="assets/files/Here%20to%20help%20your%20project.pdf" target="_blank"><br></a>I look forward to speaking with you soon.</strong></h3>
                 
             </div>
         </div>
@@ -234,7 +234,7 @@
   <script src="assets/slidervideo/script.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   </body>
 </html>
