--- a/hottoast.html
+++ b/hottoast.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html web templates</a></section><section class="header3 cid-s1OcDHczr0" id="header3-h">
+<section class="engine"><a href="https://mobirise.info/y">free html site templates</a></section><section class="header3 cid-s1OcDHczr0" id="header3-h">
 
     
 
