create github pages

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section class="carousel slide cid-s2IOkizFks" data-interval="false" id="slider1-2j">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section class="carousel slide cid-s2IOkizFks" data-interval="false" id="slider1-2j">
 
     
 
@@ -158,7 +158,7 @@
     <div class="container">
         <div class="media-container-row">
             <div class="title col-12 col-md-8">
-                <h2 class="align-center pb-3 mbr-fonts-style display-5">Chris Swingler Project Services - Here to help</h2>
+                <h2 class="align-center pb-3 mbr-fonts-style display-5">Chris Swingler Project Services - Here to help your project - Now</h2>
                 <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5"><strong>
                     Above you will see a short presentation.<br>Here you can <a href="assets/files/HeretohelpyourprojectNow.pdf" target="_blank">download a .pdf summary of my project services</a><a href="assets/files/Here%20to%20help%20your%20project.pdf" target="_blank"><br></a>I look forward to speaking with you soon.</strong></h3>
                 
